Initial commit with config file